--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,7 +174,7 @@ endif()
 set_hipace_binary_name()
 
 add_custom_target(touch_version_file
-        COMMAND ${CMAKE_COMMAND} -E touch_nocreate ${HiPACE_SOURCE_DIR}/src/HipaceVersion.H)
+        COMMAND ${CMAKE_COMMAND} -E touch_nocreate ${HiPACE_SOURCE_DIR}/src/HipaceVersion.H.in)
 add_dependencies(HiPACE touch_version_file)
 
 # Defines #####################################################################
