--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -18,25 +18,13 @@ jobs:
       SETUPTOOLS_USE_DISTUTILS: stdlib
     steps:
     - uses: actions/checkout@v3
-    - name: Brew Cache
-      uses: actions/cache@v3
-      # - once stored under a key, they become immutable (even if local cache path content changes)
-      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
-      with:
-        path: |
-          /usr/local
-          /Users/runner/Library/Caches/Homebrew
-        key: brew-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}
-        restore-keys: |
-          brew-macos-appleclang-
     - name: install dependencies
       run: |
-        brew --cache
+        brew
         set +e
         brew unlink gcc
         brew update
         brew install --overwrite python
-        brew install ccache
         brew install fftw
         brew install libomp
         brew link --force libomp
@@ -49,16 +37,6 @@ jobs:
         python3 -m pip install matplotlib
         python3 -m pip install numpy
         python3 -m pip install scipy
-    - name: CCache Cache
-      uses: actions/cache@v3
-      # - once stored under a key, they become immutable (even if local cache path content changes)
-      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
-      with:
-        path: /Users/runner/Library/Caches/ccache
-        key: ccache-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}-${{ hashFiles('cmake/dependencies/AMReX.cmake') }}
-        restore-keys: |
-          ccache-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}-
-          ccache-macos-appleclang-
     - name: build HiPACE++
       run: |
         cmake -S . -B build_sp          \
