use AB5 pusher in serial tests

--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -68,7 +68,8 @@ jobs:
       run: |
         cmake -S . -B build             \
             -DHiPACE_MPI=OFF            \
-            -DCMAKE_VERBOSE_MAKEFILE=ON
+            -DCMAKE_VERBOSE_MAKEFILE=ON \
+            -DHiPACE_PUSHER=AB5
         cmake --build build -j 2
     - name: Run Tests
       run: ctest --test-dir build --output-on-failure
