--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -23,7 +23,9 @@ jobs:
       # - once stored under a key, they become immutable (even if local cache path content changes)
       # - for a refresh the key has to change, e.g., hash of a tracked file in the key
       with:
-        path: /Users/runner/Library/Caches/Homebrew
+        path: |
+          /usr/local/Cellar/openpmd-api/
+          /Users/runner/Library/Caches/Homebrew
         key: brew-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}
         restore-keys: |
           brew-macos-appleclang-
