--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -37,20 +37,20 @@ jobs:
         brew update
         brew install --overwrite python
         brew install ccache
-        brew link ccache
+        brew link --force ccache
         brew install fftw
-        brew link fftw
+        brew link --force fftw
         brew install libomp
         brew link --force libomp
         brew install ninja
-        brew link ninja
+        brew link --force ninja
         brew install open-mpi
-        brew link open-mpi
+        brew link --force open-mpi
         brew install pkg-config
         set -e
         brew tap openpmd/openpmd
         brew install openpmd-api
-        brew link openpmd-api
+        brew link --force openpmd-api
         python3 -m pip install matplotlib
         python3 -m pip install numpy
         python3 -m pip install scipy
