--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -23,9 +23,7 @@ jobs:
       # - once stored under a key, they become immutable (even if local cache path content changes)
       # - for a refresh the key has to change, e.g., hash of a tracked file in the key
       with:
-        path: |
-          /usr/local/Cellar
-          /Users/runner/Library/Caches/Homebrew
+        path: /Users/runner/Library/Caches/Homebrew
         key: brew-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}
         restore-keys: |
           brew-macos-appleclang-
@@ -37,20 +35,15 @@ jobs:
         brew update
         brew install --overwrite python
         brew install ccache
-        brew link --force ccache
         brew install fftw
-        brew link --force fftw
         brew install libomp
         brew link --force libomp
         brew install ninja
-        brew link --force ninja
         brew install open-mpi
-        brew link --force open-mpi
         brew install pkg-config
         set -e
         brew tap openpmd/openpmd
         brew install openpmd-api
-        brew link --force openpmd-api
         python3 -m pip install matplotlib
         python3 -m pip install numpy
         python3 -m pip install scipy
