--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -23,7 +23,19 @@ jobs:
       # - once stored under a key, they become immutable (even if local cache path content changes)
       # - for a refresh the key has to change, e.g., hash of a tracked file in the key
       with:
-        path: /Users/runner/Library/Caches/Homebrew
+        path: |
+          /usr/local/Caskroom
+          /usr/local/Cellar
+          /usr/local/Frameworks
+          /usr/local/Homebrew
+          /usr/local/bin
+          /usr/local/etc
+          /usr/local/include
+          /usr/local/lib
+          /usr/local/opt
+          /usr/local/sbin
+          /usr/local/var
+          /Users/runner/Library/Caches/Homebrew
         key: brew-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}
         restore-keys: |
           brew-macos-appleclang-
@@ -57,10 +69,6 @@ jobs:
         restore-keys: |
           ccache-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}-
           ccache-macos-appleclang-
-    - name: Experiment
-      run: ls /usr/local
-    - name: Experiment2
-      run: tree /usr/local
     - name: build HiPACE++
       run: |
         cmake -S . -B build_sp          \
