--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -24,7 +24,17 @@ jobs:
       # - for a refresh the key has to change, e.g., hash of a tracked file in the key
       with:
         path: |
-          /usr/local
+          /usr/local/Caskroom
+          /usr/local/Cellar
+          /usr/local/Frameworks
+          /usr/local/Homebrew
+          /usr/local/bin
+          /usr/local/etc
+          /usr/local/include
+          /usr/local/lib
+          /usr/local/opt
+          /usr/local/sbin
+          /usr/local/var
           /Users/runner/Library/Caches/Homebrew
         key: brew-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}
         restore-keys: |
