add small brew cache

--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -18,6 +18,173 @@ jobs:
       SETUPTOOLS_USE_DISTUTILS: stdlib
     steps:
     - uses: actions/checkout@v3
+    - name: Brew Cache
+      uses: actions/cache@v3
+      # - once stored under a key, they become immutable (even if local cache path content changes)
+      # - for a refresh the key has to change, e.g., hash of a tracked file in the key
+      with:
+        path: |
+          /usr/local/Cellar/openpmd-api
+          /Users/runner/Library/Caches/Homebrew/adios2--2.9.0
+          /Users/runner/Library/Caches/Homebrew/adios2_bottle_manifest--2.9.0
+          /Users/runner/Library/Caches/Homebrew/bicep--0.16.1
+          /Users/runner/Library/Caches/Homebrew/c-blosc--1.21.3
+          /Users/runner/Library/Caches/Homebrew/c-blosc_bottle_manifest--1.21.3
+          /Users/runner/Library/Caches/Homebrew/ccache--4.8
+          /Users/runner/Library/Caches/Homebrew/ccache_bottle_manifest--4.8
+          /Users/runner/Library/Caches/Homebrew/fftw--3.3.10_1
+          /Users/runner/Library/Caches/Homebrew/fftw_bottle_manifest--3.3.10_1
+          /Users/runner/Library/Caches/Homebrew/gradle--8.0.2
+          /Users/runner/Library/Caches/Homebrew/gradle_bottle_manifest--8.0.2-1
+          /Users/runner/Library/Caches/Homebrew/hdf5-mpi--1.12.2_1
+          /Users/runner/Library/Caches/Homebrew/hdf5-mpi_bottle_manifest--1.12.2_1-1
+          /Users/runner/Library/Caches/Homebrew/hiredis--1.1.0
+          /Users/runner/Library/Caches/Homebrew/hiredis_bottle_manifest--1.1.0
+          /Users/runner/Library/Caches/Homebrew/hwloc--2.9.1
+          /Users/runner/Library/Caches/Homebrew/hwloc_bottle_manifest--2.9.1
+          /Users/runner/Library/Caches/Homebrew/imagemagick--7.1.1-7
+          /Users/runner/Library/Caches/Homebrew/imagemagick_bottle_manifest--7.1.1-7
+          /Users/runner/Library/Caches/Homebrew/libaec--1.0.6
+          /Users/runner/Library/Caches/Homebrew/libaec_bottle_manifest--1.0.6
+          /Users/runner/Library/Caches/Homebrew/libfabric--1.18.0
+          /Users/runner/Library/Caches/Homebrew/libfabric_bottle_manifest--1.18.0
+          /Users/runner/Library/Caches/Homebrew/libomp--16.0.2
+          /Users/runner/Library/Caches/Homebrew/libomp_bottle_manifest--16.0.2
+          /Users/runner/Library/Caches/Homebrew/lima--0.15.0
+          /Users/runner/Library/Caches/Homebrew/lima_bottle_manifest--0.15.0
+          /Users/runner/Library/Caches/Homebrew/mpi4py--3.1.4_1
+          /Users/runner/Library/Caches/Homebrew/mpi4py_bottle_manifest--3.1.4_1
+          /Users/runner/Library/Caches/Homebrew/ninja--1.11.1
+          /Users/runner/Library/Caches/Homebrew/ninja_bottle_manifest--1.11.1
+          /Users/runner/Library/Caches/Homebrew/nlohmann-json--3.11.2
+          /Users/runner/Library/Caches/Homebrew/nlohmann-json_bottle_manifest--3.11.2
+          /Users/runner/Library/Caches/Homebrew/node@18--18.15.0
+          /Users/runner/Library/Caches/Homebrew/node@18_bottle_manifest--18.15.0-1
+          /Users/runner/Library/Caches/Homebrew/numpy--1.24.2
+          /Users/runner/Library/Caches/Homebrew/numpy_bottle_manifest--1.24.2
+          /Users/runner/Library/Caches/Homebrew/open-mpi--4.1.5
+          /Users/runner/Library/Caches/Homebrew/open-mpi_bottle_manifest--4.1.5
+          /Users/runner/Library/Caches/Homebrew/openjdk_bottle_manifest--20
+          /Users/runner/Library/Caches/Homebrew/openjpeg--2.5.0
+          /Users/runner/Library/Caches/Homebrew/openjpeg_bottle_manifest--2.5.0-1
+          /Users/runner/Library/Caches/Homebrew/openldap--2.6.4
+          /Users/runner/Library/Caches/Homebrew/openldap_bottle_manifest--2.6.4
+          /Users/runner/Library/Caches/Homebrew/openpmd-api--0.15.1.tar.gz
+          /Users/runner/Library/Caches/Homebrew/openpmd-api--patch--c306483f1f94b308775a401c9cd67ee549fac6824a2264f5985499849fe210d5.patch
+          /Users/runner/Library/Caches/Homebrew/openssl@1.1--1.1.1t
+          /Users/runner/Library/Caches/Homebrew/openssl@1.1_bottle_manifest--1.1.1t
+          /Users/runner/Library/Caches/Homebrew/openssl@3--3.1.0
+          /Users/runner/Library/Caches/Homebrew/openssl@3_bottle_manifest--3.1.0
+          /Users/runner/Library/Caches/Homebrew/opus--1.3.1
+          /Users/runner/Library/Caches/Homebrew/opus_bottle_manifest--1.3.1-1
+          /Users/runner/Library/Caches/Homebrew/opusfile--0.12
+          /Users/runner/Library/Caches/Homebrew/opusfile_bottle_manifest--0.12
+          /Users/runner/Library/Caches/Homebrew/p11-kit--0.24.1_1
+          /Users/runner/Library/Caches/Homebrew/p11-kit_bottle_manifest--0.24.1_1
+          /Users/runner/Library/Caches/Homebrew/p7zip--17.05
+          /Users/runner/Library/Caches/Homebrew/p7zip_bottle_manifest--17.05-1
+          /Users/runner/Library/Caches/Homebrew/packer--1.8.6
+          /Users/runner/Library/Caches/Homebrew/packer_bottle_manifest--1.8.6
+          /Users/runner/Library/Caches/Homebrew/pcre2--10.42
+          /Users/runner/Library/Caches/Homebrew/pcre2_bottle_manifest--10.42
+          /Users/runner/Library/Caches/Homebrew/perl--5.36.0
+          /Users/runner/Library/Caches/Homebrew/perl_bottle_manifest--5.36.0
+          /Users/runner/Library/Caches/Homebrew/php--8.2.4
+          /Users/runner/Library/Caches/Homebrew/php--8.2.5
+          /Users/runner/Library/Caches/Homebrew/php_bottle_manifest--8.2.4
+          /Users/runner/Library/Caches/Homebrew/php_bottle_manifest--8.2.5
+          /Users/runner/Library/Caches/Homebrew/pinentry--1.2.1
+          /Users/runner/Library/Caches/Homebrew/pinentry_bottle_manifest--1.2.1
+          /Users/runner/Library/Caches/Homebrew/pipx--1.2.0
+          /Users/runner/Library/Caches/Homebrew/pipx_bottle_manifest--1.2.0
+          /Users/runner/Library/Caches/Homebrew/pixman--0.42.2
+          /Users/runner/Library/Caches/Homebrew/pixman_bottle_manifest--0.42.2
+          /Users/runner/Library/Caches/Homebrew/pkg-config--0.29.2_3
+          /Users/runner/Library/Caches/Homebrew/pkg-config_bottle_manifest--0.29.2_3
+          /Users/runner/Library/Caches/Homebrew/postgresql@14--14.7
+          /Users/runner/Library/Caches/Homebrew/postgresql@14_bottle_manifest--14.7
+          /Users/runner/Library/Caches/Homebrew/pugixml--1.13
+          /Users/runner/Library/Caches/Homebrew/pugixml_bottle_manifest--1.13
+          /Users/runner/Library/Caches/Homebrew/pybind11--2.10.4
+          /Users/runner/Library/Caches/Homebrew/pybind11_bottle_manifest--2.10.4
+          /Users/runner/Library/Caches/Homebrew/python-typing-extensions--4.5.0
+          /Users/runner/Library/Caches/Homebrew/python-typing-extensions_bottle_manifest--4.5.0
+          /Users/runner/Library/Caches/Homebrew/python@3.10--3.10.11
+          /Users/runner/Library/Caches/Homebrew/python@3.10_bottle_manifest--3.10.11
+          /Users/runner/Library/Caches/Homebrew/python@3.11--3.11.3
+          /Users/runner/Library/Caches/Homebrew/python@3.11_bottle_manifest--3.11.3
+          /Users/runner/Library/Caches/Homebrew/qemu--7.2.1
+          /Users/runner/Library/Caches/Homebrew/qemu_bottle_manifest--7.2.1
+          /Users/runner/Library/Caches/Homebrew/qemu_bottle_manifest--7.2.1-1
+          /Users/runner/Library/Caches/Homebrew/r--4.2.3
+          /Users/runner/Library/Caches/Homebrew/r_bottle_manifest--4.2.3-2
+          /Users/runner/Library/Caches/Homebrew/readline--8.2.1
+          /Users/runner/Library/Caches/Homebrew/readline_bottle_manifest--8.2.1
+          /Users/runner/Library/Caches/Homebrew/rtmpdump--2.4+20151223_1
+          /Users/runner/Library/Caches/Homebrew/rtmpdump_bottle_manifest--2.4+20151223_1
+          /Users/runner/Library/Caches/Homebrew/ruby@3.0--3.0.6
+          /Users/runner/Library/Caches/Homebrew/ruby@3.0_bottle_manifest--3.0.6
+          /Users/runner/Library/Caches/Homebrew/rustup-init--1.25.2
+          /Users/runner/Library/Caches/Homebrew/rustup-init_bottle_manifest--1.25.2
+          /Users/runner/Library/Caches/Homebrew/sbt--1.8.2
+          /Users/runner/Library/Caches/Homebrew/sbt_bottle_manifest--1.8.2
+          /Users/runner/Library/Caches/Homebrew/selenium-server--4.8.0
+          /Users/runner/Library/Caches/Homebrew/selenium-server_bottle_manifest--4.8.0
+          /Users/runner/Library/Caches/Homebrew/shared-mime-info--2.2
+          /Users/runner/Library/Caches/Homebrew/shared-mime-info_bottle_manifest--2.2
+          /Users/runner/Library/Caches/Homebrew/six--1.16.0_3
+          /Users/runner/Library/Caches/Homebrew/six_bottle_manifest--1.16.0_3
+          /Users/runner/Library/Caches/Homebrew/snappy--1.1.10
+          /Users/runner/Library/Caches/Homebrew/snappy_bottle_manifest--1.1.10
+          /Users/runner/Library/Caches/Homebrew/sox--14.4.2_5
+          /Users/runner/Library/Caches/Homebrew/sox_bottle_manifest--14.4.2_5
+          /Users/runner/Library/Caches/Homebrew/sqlite--3.41.2
+          /Users/runner/Library/Caches/Homebrew/sqlite_bottle_manifest--3.41.2
+          /Users/runner/Library/Caches/Homebrew/subversion--1.14.2_1
+          /Users/runner/Library/Caches/Homebrew/subversion_bottle_manifest--1.14.2_1-2
+          /Users/runner/Library/Caches/Homebrew/swiftformat--0.51.5
+          /Users/runner/Library/Caches/Homebrew/swiftformat--0.51.6
+          /Users/runner/Library/Caches/Homebrew/swiftformat_bottle_manifest--0.51.5
+          /Users/runner/Library/Caches/Homebrew/swiftformat_bottle_manifest--0.51.6
+          /Users/runner/Library/Caches/Homebrew/swig--4.1.1
+          /Users/runner/Library/Caches/Homebrew/swig_bottle_manifest--4.1.1
+          /Users/runner/Library/Caches/Homebrew/switchaudio-osx--1.2.1
+          /Users/runner/Library/Caches/Homebrew/switchaudio-osx_bottle_manifest--1.2.1
+          /Users/runner/Library/Caches/Homebrew/tcl-tk--8.6.13_2
+          /Users/runner/Library/Caches/Homebrew/tcl-tk_bottle_manifest--8.6.13_2
+          /Users/runner/Library/Caches/Homebrew/tidy-html5--5.8.0
+          /Users/runner/Library/Caches/Homebrew/tidy-html5_bottle_manifest--5.8.0
+          /Users/runner/Library/Caches/Homebrew/unbound--1.17.1
+          /Users/runner/Library/Caches/Homebrew/unbound_bottle_manifest--1.17.1
+          /Users/runner/Library/Caches/Homebrew/unixodbc--2.3.11
+          /Users/runner/Library/Caches/Homebrew/unixodbc_bottle_manifest--2.3.11
+          /Users/runner/Library/Caches/Homebrew/utf8proc--2.8.0
+          /Users/runner/Library/Caches/Homebrew/utf8proc_bottle_manifest--2.8.0
+          /Users/runner/Library/Caches/Homebrew/vde--2.3.3
+          /Users/runner/Library/Caches/Homebrew/vde_bottle_manifest--2.3.3
+          /Users/runner/Library/Caches/Homebrew/webp--1.3.0
+          /Users/runner/Library/Caches/Homebrew/webp_bottle_manifest--1.3.0-2
+          /Users/runner/Library/Caches/Homebrew/wget--1.21.3_1
+          /Users/runner/Library/Caches/Homebrew/wget_bottle_manifest--1.21.3_1-1
+          /Users/runner/Library/Caches/Homebrew/x265--3.5
+          /Users/runner/Library/Caches/Homebrew/x265_bottle_manifest--3.5-1
+          /Users/runner/Library/Caches/Homebrew/xorgproto--2022.2
+          /Users/runner/Library/Caches/Homebrew/xorgproto_bottle_manifest--2022.2
+          /Users/runner/Library/Caches/Homebrew/xz--5.4.2
+          /Users/runner/Library/Caches/Homebrew/xz_bottle_manifest--5.4.2
+          /Users/runner/Library/Caches/Homebrew/yaml-cpp--0.7.0
+          /Users/runner/Library/Caches/Homebrew/yaml-cpp_bottle_manifest--0.7.0
+          /Users/runner/Library/Caches/Homebrew/yq--4.33.3
+          /Users/runner/Library/Caches/Homebrew/yq_bottle_manifest--4.33.3
+          /Users/runner/Library/Caches/Homebrew/zeromq--4.3.4
+          /Users/runner/Library/Caches/Homebrew/zeromq_bottle_manifest--4.3.4
+          /Users/runner/Library/Caches/Homebrew/zlib--1.2.13
+          /Users/runner/Library/Caches/Homebrew/zlib_bottle_manifest--1.2.13-1
+          /Users/runner/Library/Caches/Homebrew/zstd--1.5.5
+          /Users/runner/Library/Caches/Homebrew/zstd_bottle_manifest--1.5.5
+        key: brew-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}
+        restore-keys: |
+          brew-macos-appleclang-
     - name: install ccache
       run: |
         brew --cache
