--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -24,6 +24,7 @@ jobs:
       # - for a refresh the key has to change, e.g., hash of a tracked file in the key
       with:
         path: |
+          /usr/local/Cellar/openpmd-api
           /Users/runner/Library/Caches/Homebrew/adios2--2.9.0
           /Users/runner/Library/Caches/Homebrew/adios2_bottle_manifest--2.9.0
           /Users/runner/Library/Caches/Homebrew/bicep--0.16.1
@@ -214,6 +215,7 @@ jobs:
         brew install pkg-config
         set -e
         brew tap openpmd/openpmd
+        brew install openpmd-api --only-dependencies --force
         brew install openpmd-api
         brew link openpmd-api
         python3 -m pip install matplotlib
