--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -46,9 +46,9 @@ jobs:
         $Env:CCACHE_COMPRESS='1'
         $Env:CCACHE_COMPRESSLEVEL='10'
         $Env:CCACHE_MAXSIZE='105M'
-        ccache -p
-        ccache -s
-        ccache -z
+        $ccachepath\ccache.exe -p
+        $ccachepath\ccache.exe -s
+        $ccachepath\ccache.exe -z
 
         $Env:CCACHE_DIR="$ccachecachedir"
         $env:FFTW3_DIR = "C:/Program Files (x86)/fftw/"
@@ -57,12 +57,12 @@ jobs:
               -DCMAKE_VERBOSE_MAKEFILE=ON `
               -DHiPACE_COMPUTE=NOACC      `
               -DHiPACE_MPI=OFF            `
-              -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
+              -DCMAKE_CXX_COMPILER_LAUNCHER=$ccachepath\ccache.exe
         if(!$?) { Exit $LASTEXITCODE }
         cmake --build build --config Debug --parallel 2
         if(!$?) { Exit $LASTEXITCODE }
 
-        ccache -s
+        $ccachepath\ccache.exe -s
 
 #        ctest --test-dir build --build-config Debug --output-on-failure
 #        if(!$?) { Exit $LASTEXITCODE }
@@ -117,9 +117,9 @@ jobs:
         $Env:CCACHE_COMPRESS='1'
         $Env:CCACHE_COMPRESSLEVEL='10'
         $Env:CCACHE_MAXSIZE='105M'
-        ccache -p
-        ccache -s
-        ccache -z
+        $ccachepath\ccache.exe -p
+        $ccachepath\ccache.exe -s
+        $ccachepath\ccache.exe -z
 
         $Env:CCACHE_DIR="$ccachecachedir"
         set "FFTW3_DIR=C:/Program Files (x86)/fftw/"
@@ -131,12 +131,12 @@ jobs:
               -DCMAKE_VERBOSE_MAKEFILE=ON   ^
               -DHiPACE_COMPUTE=OMP          ^
               -DHiPACE_MPI=OFF              ^
-              -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
+              -DCMAKE_CXX_COMPILER_LAUNCHER=$ccachepath\ccache.exe
         if errorlevel 1 exit 1
         cmake --build build --config Release --parallel 2
         if errorlevel 1 exit 1
 
-        ccache -s
+        $ccachepath\ccache.exe -s
 
 #        ctest --test-dir build --build-config Release --output-on-failure
 #        if errorlevel 1 exit 1
