--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,10 +23,6 @@ jobs:
         restore-keys: |
           ccache-windows-winmsvc-${{ hashFiles('.github/workflows/windows.yml') }}-
           ccache-windows-winmsvc-
-    - name: Install Ccache
-      run: |
-        Invoke-WebRequest https://github.com/ccache/ccache/releases/download/v4.8/ccache-4.8-windows-x86_64.zip -OutFile ccache-4.8-windows-x86_64.zip
-        Expand-Archive ccache-4.8-windows-x86_64.zip
     - name: install dependencies
       run: |
         Invoke-WebRequest http://fftw.org/fftw-3.3.10.tar.gz -OutFile fftw-3.3.10.tar.gz
@@ -38,39 +34,21 @@ jobs:
         if(!$?) { Exit $LASTEXITCODE }
     - name: Build & Install
       run: |
-        $ccachepath = Join-Path $pwd "ccache-4.8-windows-x86_64"
-        $Env:PATH += ";$ccachepath"
-        $ccachecachedir = Join-Path $HOME ".ccache"
-        $Env:CCACHE_DIR="$ccachecachedir"
-        $Env:CCACHE_DIR
-        $Env:CCACHE_COMPRESS='1'
-        $Env:CCACHE_COMPRESSLEVEL='10'
-        $Env:CCACHE_MAXSIZE='105M'
-        & "$ccachepath\ccache.exe" -p
-        & "$ccachepath\ccache.exe" -s
-        & "$ccachepath\ccache.exe" -z
-        ls $ccachepath
-
-        $Env:CCACHE_DIR="$ccachecachedir"
         $env:FFTW3_DIR = "C:/Program Files (x86)/fftw/"
         cmake -S . -B build               `
               -DCMAKE_BUILD_TYPE=Debug    `
               -DCMAKE_VERBOSE_MAKEFILE=ON `
               -DHiPACE_COMPUTE=NOACC      `
-              -DHiPACE_MPI=OFF            `
-              -DCMAKE_CXX_COMPILER_LAUNCHER=$ccachepath\ccache.exe
+              -DHiPACE_MPI=OFF
         if(!$?) { Exit $LASTEXITCODE }
         cmake --build build --config Debug --parallel 2
         if(!$?) { Exit $LASTEXITCODE }
-
-        & "$ccachepath\ccache.exe" -s
-
 #        ctest --test-dir build --build-config Debug --output-on-failure
 #        if(!$?) { Exit $LASTEXITCODE }
 
   build_win_clang:
     name: Clang w/ OMP w/o MPI
-    runs-on: windows-latest
+    runs-on: windows-2019
     if: github.event.pull_request.draft == false
     steps:
     - uses: actions/checkout@v3
@@ -79,15 +57,13 @@ jobs:
       # - once stored under a key, they become immutable (even if local cache path content changes)
       # - for a refresh the key has to change, e.g., hash of a tracked file in the key
       with:
-        path: ~/.ccache
+        path: |
+          ~/.ccache
+          ~/.cache/ccache
         key: ccache-windows-winclang-${{ hashFiles('.github/workflows/windows.yml') }}-${{ hashFiles('cmake/dependencies/AMReX.cmake') }}-${{ github.event.repository.pushed_at }}
         restore-keys: |
           ccache-windows-winclang-${{ hashFiles('.github/workflows/windows.yml') }}-
           ccache-windows-winclang-
-    - name: Install Ccache
-      run: |
-        Invoke-WebRequest https://github.com/ccache/ccache/releases/download/v4.8/ccache-4.8-windows-x86_64.zip -OutFile ccache-4.8-windows-x86_64.zip
-        Expand-Archive ccache-4.8-windows-x86_64.zip
     - uses: seanmiddleditch/gha-setup-ninja@master
     - name: download dependencies
       run: |
@@ -97,7 +73,7 @@ jobs:
     - name: install dependencies
       shell: cmd
       run: |
-        call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\vc\Auxiliary\build\vcvarsall.bat" x64
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\vc\Auxiliary\build\vcvarsall.bat" x64
         cmake -S fftw-3.3.10  ^
               -B build_fftw   ^
               -G "Ninja"      ^
@@ -108,22 +84,7 @@ jobs:
     - name: Build & Install
       shell: cmd
       run: |
-        call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\vc\Auxiliary\build\vcvarsall.bat" x64
-
-        $ccachepath = Join-Path $pwd "ccache-4.8-windows-x86_64"
-        $Env:PATH += ";$ccachepath"
-        $ccachecachedir = Join-Path $HOME ".ccache"
-        $Env:CCACHE_DIR="$ccachecachedir"
-        $Env:CCACHE_DIR
-        $Env:CCACHE_COMPRESS='1'
-        $Env:CCACHE_COMPRESSLEVEL='10'
-        $Env:CCACHE_MAXSIZE='105M'
-        & "$ccachepath\ccache.exe" -p
-        & "$ccachepath\ccache.exe" -s
-        & "$ccachepath\ccache.exe" -z
-        ls $ccachepath
-
-        $Env:CCACHE_DIR="$ccachecachedir"
+        call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\vc\Auxiliary\build\vcvarsall.bat" x64
         set "FFTW3_DIR=C:/Program Files (x86)/fftw/"
         cmake -S . -B build   ^
               -G "Ninja"      ^
@@ -132,13 +93,9 @@ jobs:
               -DCMAKE_BUILD_TYPE=Release    ^
               -DCMAKE_VERBOSE_MAKEFILE=ON   ^
               -DHiPACE_COMPUTE=OMP          ^
-              -DHiPACE_MPI=OFF              ^
-              -DCMAKE_CXX_COMPILER_LAUNCHER=$ccachepath\ccache.exe
+              -DHiPACE_MPI=OFF
         if errorlevel 1 exit 1
         cmake --build build --config Release --parallel 2
         if errorlevel 1 exit 1
-
-        & "$ccachepath\ccache.exe" -s
-
 #        ctest --test-dir build --build-config Release --output-on-failure
 #        if errorlevel 1 exit 1
