--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -24,6 +24,11 @@ jobs:
       # - for a refresh the key has to change, e.g., hash of a tracked file in the key
       with:
         path: |
+          /usr/local/Cellar/fftw
+          /usr/local/Cellar/libomp
+          /usr/local/Cellar/ninja
+          /usr/local/Cellar/numpy
+          /usr/local/Cellar/open-mpi
           /usr/local/Cellar/openpmd-api
         key: brew-macos-appleclang-${{ hashFiles('.github/workflows/macos.yml') }}
         restore-keys: |
@@ -34,7 +39,9 @@ jobs:
         set +e
         brew unlink gcc
         brew update
+        brew install ccache --only-dependencies --force
         brew install ccache
+        brew link ccache
     - name: CCache Cache
       uses: actions/cache@v3
       # - once stored under a key, they become immutable (even if local cache path content changes)
@@ -50,17 +57,32 @@ jobs:
         brew --cache
         set +e
         brew install --overwrite python
+
+        brew install fftw --only-dependencies --force
         brew install fftw
+        brew link fftw
+
+        brew install libomp --only-dependencies --force
         brew install libomp
         brew link --force libomp
+
+        brew install ninja --only-dependencies --force
         brew install ninja
+        brew link ninja
+
+        brew install open-mpi --only-dependencies --force
         brew install open-mpi
+        brew link open-mpi
+
         brew install pkg-config
+
         set -e
+
         brew tap openpmd/openpmd
         brew install openpmd-api --only-dependencies --force
         brew install openpmd-api
         brew link openpmd-api
+
         python3 -m pip install matplotlib
         python3 -m pip install numpy
         python3 -m pip install scipy
