Update versions of Python packages to build RTD doc (#934)
* newer package versions for building doc

* python3.7 on RTD requires sphinx<6

* try with py openssl

* remove test

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,11 +5,11 @@
 # Authors: MaxThevenet, Severin Diederichs
 # License: BSD-3-Clause-LBNL
 
-sphinx_rtd_theme>=0.4.0
+sphinx>=5.3
+sphinx_rtd_theme>=1.1.1
 recommonmark
-sphinx>=3.0
 # docutils 0.17 breaks HTML tags & RTD theme
 # https://github.com/sphinx-doc/sphinx/issues/9001
-docutils<=0.16
+docutils>=0.17.1
 pygments
 breathe
